@@ -1,3 +1,12 @@
+2007-09-15  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/mode_data/box_data_list.cc: create_layout(): Do not try to 
+	add the previously-used primary key if there is no primary key in the 
+	table (for instance, if there are no fields in the table). This avoids 
+	an internal postgres warning about a non-existant field.
+	* glom/utility_widgets/db_adddel/db_adddel.cc: Clear the model if there 
+	are no fields. This prevents a crash at startup if a table has no fields.
+
 2007-09-14  Armin Burgmeier  <armin@openismus.com>
 
 	* several files: Merged changes from the GLOM_CLIENTONLY branch. This
